set(CSVCPP_ROOT "${DEP_DIR}/csv-cpp" CACHE INTERNAL "")
set(CSVCPP_INCLUDE_DIR "${CSVCPP_ROOT}/src" CACHE INTERNAL "")
set(CSVCPP_LIBRARY "csvcpp" CACHE INTERNAL "")
set(CSVCPP_SRC "${CSVCPP_ROOT}/src/CSV.cpp")

include_directories(${CSVCPP_INCLUDE_DIR})
add_library(${CSVCPP_LIBRARY} ${CSVCPP_SRC})

set(EIGEN_ROOT "${DEP_DIR}/eigen" CACHE INTERNAL "")
set(EIGEN_INCLUDE_DIR "${EIGEN_ROOT}" CACHE INTERNAL "")

set(SPDLOG_ROOT "${DEP_DIR}/spdlog" CACHE INTERNAL "")
set(SPDLOG_INCLUDE_DIR "${SPDLOG_ROOT}/include" CACHE INTERNAL "")

set(MATPLOTLIBCPP_ROOT "${DEP_DIR}/matplotlib-cpp" CACHE INTERNAL "")
set(MATPLOTLIBCPP_INCLUDE_DIR "${MATPLOTLIBCPP_ROOT}" CACHE INTERNAL "")
